# Micro-XRCE-DDS-Client

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  CTestJenkins.cmake  PLATFORM_SUPPORT.md  QUALITY.md  README.md  VERSIONING.md  check_configuration.cmake  client.config  doxyfile.in
.github/workflows/: ci_linux.yml  ci_windows.yml  codeql-analysis.yml  performance.yml
ci/linux/: CMakeLists.txt
ci/metrics/: check_last_result.py  generate_plot.py  save_results.py
cmake/: SuperBuild.cmake
cmake/common/: check_configuration.cmake
cmake/dev/: check_configuration.cmake  eprosima_libraries.cmake  generate_msvc_libraries.cmake  gtest.cmake  set_sources.cmake
cmake/packaging/: Config.cmake.in  eProsimaPackaging.cmake
doc/sources/: file_inheritance.nomnoml  xrce_protocol.nomnoml
examples/BinaryEntityCreation/: CMakeLists.txt  main.c
examples/BrokerlessPublisher/: CMakeLists.txt  main.c
examples/BrokerlessSubscriber/: CMakeLists.txt  main.c
examples/ContinousFragment/: CMakeLists.txt  main.c
examples/ContinuousFragment/: CMakeLists.txt  main.c
examples/CustomTransports/: CMakeLists.txt  main.c  my_custom_transport.c  my_custom_transport.h
examples/Deployment/: CMakeLists.txt  HelloWorld.c  HelloWorld.h  HelloWorldWriter.c  HelloWorldWriter.h  README.md  configurator_client.c  publisher.c  subscriber.c
examples/Discovery/: CMakeLists.txt  README.md  main.c  multicast.c  unicast.c
examples/Imu/: CMakeLists.txt  Imu.c  Imu.h  Imu.idl  ImuPublisher.c  ImuSubscriber.c
examples/MultiSessionHelloWorld/: CMakeLists.txt  README.md  main.c
examples/MultithreadAdder/: CMakeLists.txt  main.c
examples/MultithreadHelloWorld/: CMakeLists.txt  main.c
examples/PublishBigHelloWorld/: main.c
examples/PublishHelloWorld/: CMakeLists.txt  HelloWorld.c  HelloWorld.h  HelloWorldWriter.c  HelloWorldWriter.h  README.md  WriteHelloWorld.c  WriteHelloWorld.h  main.c
examples/PublishHelloWorldBestEffort/: CMakeLists.txt  README.md  main.c
examples/PublishHelloWorldCAN/: CMakeLists.txt  README.md  main.c
examples/PublishHelloWorldP2P/: CMakeLists.txt  (+2 more)
examples/RequestAdder/: CMakeLists.txt  main.c
examples/ShapesDemo/: CMakeLists.txt  Shape.h  ShapeType.c  ShapeType.h  ShapeTypeWriter.c  ShapeTypeWriter.h  WriteShapeType.c  WriteShapeType.h  main.c
examples/mini_cdr/: CMakeLists.txt  mini_cdr_example.c
examples/prototype/client/: CMakeLists.txt  prototype_client.c
examples/quickhelloworld/: CMakeLists.txt  HelloWorld.h  main.c
examples/shapesdemo/: CMakeLists.txt  Shape.h  main.c
microCDRgen/: microcdr_gen.py  xrce_protocol.yaml
test/: CMakeLists.txt  DEFAULT_FASTRTPS_PROFILES.xml  Message.cpp  XRCEClient.cpp  XRCEProtocolSerialization.cpp  data_reader_profile.xml  data_writer_profile.xml  hello_data_reader_profile.xml  hello_data_writer_profile.xml  hello_topic.xml  mini_cdr_test.cpp  shape_topic.xml
test/case/: CMakeLists.txt
test/case/installation/: InstallationTest.cmake
test/cmake/dev/: gtest.cmake
test/integration/cross_serialization/: CMakeLists.txt  ClientSerialization.cpp  ClientSerialization.hpp
test/integration/interaction/: BigHelloWorld.c  BigHelloWorld.h  BigHelloWorld.idl  CMakeLists.txt  Client.cpp  Client.hpp  ClientInteraction.cpp  ClientInteraction.hpp  Discovery.hpp  Gateway.hpp  HelloWorld.c  HelloWorld.h  HelloWorldWriter.c  HelloWorldWriter.h  tcp_transport_linux.h  uart_transport_linux.h  udp_transport_linux.h  udp_transport_windows.h
test/integration/xrce_serialization/: CMakeLists.txt  ClientSerialization.cpp  ClientSerialization.hpp  client_serialization.cpp  client_serialization.hpp
test/memory/: memory_test.sh
test/memory/consumption/: CMakeLists.txt  MemoryConsumption.c  performance_profile.config  stack_analysis.py
test/memory/memory_map/: complete_profile.config  core_profile.config  memory_map.sh  ref_profile.config  serial_profile.config  tcp_profile.config  udp_profile.config  xml_profile.config
test/message/: CMakeLists.txt
test/mini_cdr/: CMakeLists.txt  mini_cdr_test.c  mini_micro_cdr_performance_comparative_test.c
test/mini_vs_micro_cdr_performance/: CMakeLists.txt  mini_vs_micro_cdr_performance_test.c
test/profiling/: CMakeLists.txt
test/profiling/publisher/: CMakeLists.txt  main.c
test/profiling/resources/: ByteArray.c  client_profiling.refs  config.h.in
test/profiling/scripts/: publisher_profiler.py  subscriber_profiler.py
test/profiling/subscriber/: CMakeLists.txt  main.c
test/prototype/agent/: CMakeLists.txt  prototype_agent.c
test/prototype/client/: CMakeLists.txt  prototype_client.c
test/prototype/common/: file_io.h  serial_port_io.c  serial_port_io.h
test/shared_memory/: CMakeLists.txt  SharedMemory.cpp
test/throughput/: Zenoh.txt  agent.refs  lauch.sh  results.txt
test/throughput/SimpleArrayPublisher/: CMakeLists.txt  main.c
test/throughput/TroughputRegister/: CMakeLists.txt  main.c
test/transport/custom_comm/: CustomComm.cpp  CustomComm.hpp
test/transport/serial_comm/: CMakeLists.txt  SerialComm.cpp  SerialComm.hpp
test/transport/transport_comm/: CMakeLists.txt  CustomComm.cpp  CustomComm.hpp  SerialComm.cpp  SerialComm.hpp  Test.cpp
test/unitary/: CMakeLists.txt
test/unitary/session/: CMakeLists.txt  ObjectId.cpp  Session.cpp  SessionInfo.cpp  Submessage.cpp  Utils.cpp  WriteReadAccess.cpp
test/unitary/session/object_id/: CMakeLists.txt  ObjectId.cpp
test/unitary/session/session_info/: CMakeLists.txt  SessionInfo.cpp
test/unitary/session/streams/: CommonReliableStream.cpp  InputBestEffortStream.cpp  InputReliableStream.cpp  OutputBestEffortStream.cpp  OutputReliableStream.cpp  SeqNum.cpp  StreamId.cpp  StreamStorage.cpp
test/unitary/session/submessage/: CMakeLists.txt
test/unitary/streams/: CMakeLists.txt  InputBestEffortStream.cpp  OutputBestEffortStream.cpp  OutputReliableStream.cpp
test/unitary/streams/output_best_effort/: CMakeLists.txt  OutputBestEffortStream.cpp
toolchains/: CMakeLists.txt  cf_toolchain.cmake  nuttx_toolchain.cmake  nuttx_toolchain.cmake.in
util/: microcdr_gen.py  send_data_to_udp.py
(+453 files in other folders)
